# inox2d

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_wheels.yml  wheel.yml
inox2d-python/: Cargo.toml  README.md  inox2d-0.3.0-cp38-abi3-macosx_10_12_x86_64.whl  inox2d-0.3.0-cp38-abi3-macosx_11_0_arm64.whl  inox2d-0.3.0-cp38-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  inox2d-0.3.0-cp38-abi3-win32.whl  inox2d-0.3.0-cp38-abi3-win_amd64.whl  pyproject.toml
inox2d-python/src/: lib.rs
inox2d-python/tests/: test_basic.py
